[gd_scene load_steps=4 format=3 uid="uid://level2"]

[ext_resource type="Script" path="res://scripts/level2.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/board.tscn" id="2"]

[node name="level2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0

[node name="LabelLevel" type="Label" parent="TopBar"]
text = "Level 2"

[node name="LabelMoves" type="Label" parent="TopBar"]
text = "Moves Left: 15"

[node name="LabelScore" type="Label" parent="TopBar"]
text = "Score: 0"

[node name="Board" parent="." instance=ExtResource("2")]
position = Vector2(100, 120)
starting_moves = 15
target_score = 200

[node name="WinDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Win!"

[node name="LoseDialog" type="AcceptDialog" parent="."]
visible = false
title = "You Lose!"
